--- a/home/templates/home/gpcrdb.html
+++ b/home/templates/home/gpcrdb.html
@@ -170,7 +170,7 @@
             <a tabindex="0" href="#">Drug & Agents in trial</a>
             <ul class="dropdown-menu">
                 <li><a href="{{ hosts.gpcr }}/drugs/drugs_venn">Agents/drugs by phase I-IV<a/></li>
-                <li><a href="{{ hosts.gpcr }}/drugs/drugstatistics">Agent/drug page</a></li>
+                <li><a href="{{ hosts.gpcr }}/drugs/drug_selection">Agent/drug page</a></li>
             </ul>
         </li>
         <li class="dropdown-submenu">
