UPDATE" setting up drugged GPCRome page

--- a/home/templates/home/gpcrdb.html
+++ b/home/templates/home/gpcrdb.html
@@ -177,7 +177,7 @@
             <a tabindex="0" href="#">Targets</a>
             <ul class="dropdown-menu">
                 <li><a href="{{ hosts.gpcr }}/drugs/targets_venn">Targets by phase I-IV<a/></li>
-                <li><a href="{{ hosts.gpcr }}/drugs/drugstatistics">The drugged GPCRome<a/></li>
+                <li><a href="{{ hosts.gpcr }}/drugs/overview">The drugged GPCRome<a/></li>
                 <li><a href="{{ hosts.gpcr }}/drugs/drugstatistics">Target page</a></li>
                 <li><a href="{{ hosts.gpcr }}/drugs/drugstatistics">Target selection tool</a></li>
             </ul>
