--- a/home/templates/home/gpcrdb.html
+++ b/home/templates/home/gpcrdb.html
@@ -178,14 +178,14 @@
             <ul class="dropdown-menu">
                 <li><a href="{{ hosts.gpcr }}/drugs/targets_venn">Targets by phase I-IV<a/></li>
                 <li><a href="{{ hosts.gpcr }}/drugs/drugstatistics">The drugged GPCRome<a/></li>
-                <li><a href="{{ hosts.gpcr }}/drugs/drugstatistics">Target page</a></li>
+                <li><a href="{{ hosts.gpcr }}/drugs/target_selection">Target page</a></li>
                 <li><a href="{{ hosts.gpcr }}/drugs/drugstatistics">Target selection tool</a></li>
             </ul>
         </li>
         <li class="dropdown-submenu">
             <a tabindex="0" href="#">Diseases</a>
             <ul class="dropdown-menu">
-                <li><a href="{{ hosts.gpcr }}/drugs/drugstatistics">Disease page</a></li>
+                <li><a href="{{ hosts.gpcr }}/drugs/disease_selection">Disease page</a></li>
             </ul>
         </li>
         <li class="divider"></li>
