--- a/home/templates/home/gpcrdb.html
+++ b/home/templates/home/gpcrdb.html
@@ -184,8 +184,8 @@
             <ul class="dropdown-menu">
                 <li><a href="{{ hosts.gpcr }}/drugs/targets_venn">Targets by phase I-IV<a/></li>
                 <li><a href="{{ hosts.gpcr }}/drugs/overview">The drugged GPCRome<a/></li>
-                <li><a href="{{ hosts.gpcr }}/drugs/drugstatistics">Target page</a></li>
-                <li><a href="{{ hosts.gpcr }}/drugs/drugstatistics">Target selection tool</a></li>
+                <li><a href="{{ hosts.gpcr }}/drugs/target_selection">Target page</a></li>
+                <li><a href="{{ hosts.gpcr }}/drugs/TargetSelectionTool">Target selection tool</a></li>
             </ul>
         </li>
         <li class="dropdown-submenu">
