--- a/home/templates/home/gpcrdb.html
+++ b/home/templates/home/gpcrdb.html
@@ -195,7 +195,7 @@
             </ul>
         </li>
         <li class="divider"></li>
-        <li><a href="{{ hosts.gpcr }}/drugs/drugbrowser">Drugs, targets <span>&#38;</span> indications</a></li>
+        <!-- <li><a href="{{ hosts.gpcr }}/drugs/drugbrowser">Drugs, targets <span>&#38;</span> indications</a></li>
         <li><a href="{{ hosts.gpcr }}/drugs/drugmapping">Drug target tree</a></li>
         <li><a href="{{ hosts.gpcr }}/drugs/drugstatistics">Drug statistics</a></li>
         <li class="divider"></li>
@@ -211,7 +211,7 @@
             </ul>
         </li>
         <li><a href="{{ hosts.gpcr }}/drugs/TargetSelectionTool">Target Selection Tool</a></li>
-        <li class="divider"></li>
+        <li class="divider"></li> -->
         <!-- DEPRECATED FUNCTION
           <li class="nav-header disabled text-left"><a>Structures</a></li>
           <li>
