UPDATE: Drugs final model + Cleanup

--- a/home/templates/home/gpcrdb.html
+++ b/home/templates/home/gpcrdb.html
@@ -33,14 +33,7 @@
               </a>
             </li>
             <li><a href="{{ hosts.gpcr }}/residue/residuetable">Generic residue number tables</a></li>
-            <li class="dropdown-submenu">
-                <a tabindex="0" href="#">Genetic variants</a>
-                <ul class="dropdown-menu">
-                  <li><a href="{{ hosts.gpcr }}/mutational_landscape/statistics">Variation coverage</a></li>
-                  <li><a href="{{ hosts.gpcr }}/mutational_landscape">Receptor variants</a></li>
-                  <li><a href="{{ hosts.gpcr }}/mutational_landscape/economicburden">Estimated economic burden</a></li>
-                </ul>
-            </li>
+            <li><a href="{{ hosts.gpcr }}/mutational_landscape/pgxdb">Generic variants</a></li>
             <li><a href="{{ hosts.gpcr }}/protein/isoforms">Isoforms</a></li>
 
             <!-- SEQUENCE COMPARISON -->
@@ -200,7 +193,7 @@
         <li><a href="{{ hosts.gpcr }}/drugs/drugstatistics">Drug statistics</a></li>
         <li class="divider"></li>
         <li class="nav-header disabled"><a>New Drugs tabs</a></li>
-        
+
         <li class="dropdown-submenu">
             <a tabindex="0" href="#">Drugs, Indications & Targets</a>
             <ul class="dropdown-menu">
