Update: links, view, target selection, data fix, and pages fix

--- a/home/templates/home/gpcrdb.html
+++ b/home/templates/home/gpcrdb.html
@@ -167,25 +167,26 @@
         <li class="nav-header disabled"><a>DRUGS & AGENTS IN TRIAL</a></li>
 
         <li class="dropdown-submenu">
-            <a tabindex="0" href="#">Drug & Agents in trial</a>
+            <a tabindex="0" href="#">Agents/drugs</a>
             <ul class="dropdown-menu">
-                <li><a href="{{ hosts.gpcr }}/drugs/drugs_venn">Agents/drugs by phase I-IV<a/></li>
                 <li><a href="{{ hosts.gpcr }}/drugs/drug_selection">Agent/drug page</a></li>
+                <li><a href="{{ hosts.gpcr }}/drugs/drugs_venn">Agents/drugs by phase I-IV</a></li>
             </ul>
         </li>
         <li class="dropdown-submenu">
             <a tabindex="0" href="#">Targets</a>
             <ul class="dropdown-menu">
-                <li><a href="{{ hosts.gpcr }}/drugs/targets_venn">Targets by phase I-IV<a/></li>
-                <li><a href="{{ hosts.gpcr }}/drugs/overview">The drugged GPCRome<a/></li>
                 <li><a href="{{ hosts.gpcr }}/drugs/target_selection">Target page</a></li>
+                <li><a href="{{ hosts.gpcr }}/drugs/targets_venn">Targets by phase I-IV</a></li>
+                <li><a href="{{ hosts.gpcr }}/drugs/overview">The drugged GPCRome</a></li>
                 <li><a href="{{ hosts.gpcr }}/drugs/TargetSelectionTool">Target selection tool</a></li>
             </ul>
         </li>
         <li class="dropdown-submenu">
-            <a tabindex="0" href="#">Indications</a>
+            <a tabindex="0" href="#">Diseases</a>
             <ul class="dropdown-menu">
-                <li><a href="{{ hosts.gpcr }}/drugs/indication_selection">Indication page</a></li>
+                <li><a href="{{ hosts.gpcr }}/drugs/indication_selection">Disease page</a></li>
+                <li><a href="{{ hosts.gpcr }}/drugs/indication_selection">Disease overview</a></li>
             </ul>
         </li>
         <li class="divider"></li>
