UPDATE: New disease overview page. Fixed build issues

--- a/home/templates/home/gpcrdb.html
+++ b/home/templates/home/gpcrdb.html
@@ -183,9 +183,10 @@
             </ul>
         </li>
         <li class="dropdown-submenu">
-            <a tabindex="0" href="#">Indications</a>
+            <a tabindex="0" href="#">Diseases</a>
             <ul class="dropdown-menu">
-                <li><a href="{{ hosts.gpcr }}/drugs/indication_selection">Indication page</a></li>
+                <li><a href="{{ hosts.gpcr }}/drugs/indication_selection">Disease page</a></li>
+                <li><a href="{{ hosts.gpcr }}/drugs/disease_overview">Disease overview</a></li>
             </ul>
         </li>
         <li class="divider"></li>
