Small merge fixes

--- a/home/templates/home/gpcrdb.html
+++ b/home/templates/home/gpcrdb.html
@@ -186,7 +186,7 @@
             <a tabindex="0" href="#">Diseases</a>
             <ul class="dropdown-menu">
                 <li><a href="{{ hosts.gpcr }}/drugs/indication_selection">Disease page</a></li>
-                <li><a href="{{ hosts.gpcr }}/drugs/indication_selection">Disease overview</a></li>
+                <li><a href="{{ hosts.gpcr }}/drugs/disease_overview">Disease overview</a></li>
             </ul>
         </li>
         <li class="divider"></li>
